--- a/moviePicker/public/index.html
+++ b/moviePicker/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="reset" href="assets/css/reset.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -18,5 +19,84 @@
     <script src="assets/js/index.js"></script>
     <title>Movie Picker</title>
   </head>
-  <body></body>
+  <body>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4 site-description">Analysis Paralysis</h1>
+        <p class="lead site-description">
+          Ever stare at your Netflix home and spend more time trying to pick
+          what to watch than actually watch something? You're not alone. This is
+          my solution to this ubiquitos problem. Enter everything you're
+          interested in watching and hit the randomizer, the page will then
+          display everything in a random order. This will take away at least
+          some of the stress of choice. Enjoy!
+        </p>
+      </div>
+    </div>
+    <form class="site-display">
+      <label for="title">Title*</label>
+      <input type="text" id="title"></textinput>
+    </form>
+    <div class="site-display" id="list">
+      <button id="random" class="btn btn-primary">Randomize!</button>
+    </div>
+    <div class="modal" tabindex="-1" role="dialog" id="infoModal">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalTitle"></h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body" id="modal"></div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal" tabindex="-1" role="dialog" id="delWarning">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Warning! Permanent Action!</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body" id="warningBody"></div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" id="delConfirm">
+              Delete
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Cancel
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
