--- a/moviePicker/public/index.html
+++ b/moviePicker/public/index.html
@@ -36,9 +36,11 @@
     <form class="site-display">
       <label for="title">Title*</label>
       <input type="text" id="title"></textinput>
+      <button id="insert">Add</button>
     </form>
-    <div class="site-display" id="list">
-      <button id="random" class="btn btn-primary">Randomize!</button>
+    <div class="site-display" id="listBox">
+      <ol id="list"></ol>
+      <!-- <button id="random" class="btn btn-primary">Randomize!</button> -->
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="infoModal">
       <div class="modal-dialog" role="document">
