was missing bootstrap js script to allow modal to open. the delete function is now working

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
       crossorigin="anonymous"
     ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="assets/js/index.js"></script>
     <title>Movie Picker</title>
   </head>
