changed lists from ordered to unordered and added shuffle function

--- a/public/index.html
+++ b/public/index.html
@@ -35,13 +35,14 @@
       </div>
     </div>
     <form class="site-display">
-      <label for="title">Title*</label>
+      <label for="title">Title</label>
       <input type="text" id="title"></textinput>
       <button id="insert">Add</button>
     </form>
     <div class="site-display" id="listBox">
-      <ol id="list"></ol>
-      <!-- <button id="random" class="btn btn-primary">Randomize!</button> -->
+      <ul id="list"></ul>
+      <button id="random" class="btn btn-primary">Randomize!</button>
+      <ul id="viewedList"></ul>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="infoModal">
       <div class="modal-dialog" role="document">
