--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,14 @@
       <button id="insert">Add</button>
     </form>
     <div class="site-display" id="listBox">
-      <h4>What to Watch</h4>
+      <div id="headerBox">
+        <h4 class="heading" id="notViewedHead">What to Watch</h4>
+        <h4 class="heading" id="viewedHead">Already Watched</h4>
+      </div>
       <ul id="list"></ul>
-      <h4>Already Watched</h4>
       <ul id="viewedList"></ul>
-      <button id="random" class="btn btn-primary">Randomize!</button>
     </div>
+    <button id="random" class="btn btn-primary">Randomize!</button>
     <div class="modal" tabindex="-1" role="dialog" id="infoModal">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
