--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="assets/js/index.js"></script>
     <title>Movie Picker</title>
   </head>
